# protracer

./: .gitignore  AUTHORS  Baselex.c  Baselex.l  Baseparse.c  Baseparse.h  Baseparse.y  Bitmap.c  Bitmap.h  Bool.h  Camera.c  Camera.h  ChangeLog  Color.c  Color.h  ColorOption.c  ColorOption.h  Error.c  Error.h  Finish.c  Finish.h  HitData.h  Light.c  Light.h  LightArray.c  LightArray.h  LightList.c  LightList.h  Makefile  Makefile.am  NEWS  Object.c  Object.h  ObjectArray.c  ObjectArray.h  ObjectList.c  ObjectList.h  ObjectMods.c  ObjectMods.h  PPMFile.c  (+26 more)
data/: Makefile.am  example1.pov.in  example10.pov.in  example11.pov.in  example12.pov.in  example2.pov.in  example3.pov.in  example4.pov.in  example5.pov.in  example6.pov.in  example7.pov.in  example8.pov.in  example9.pov.in  sky.ppm  tests.sh
data/examples/: example1.pov  example2.pov.in
installer/: protracer.iss  website.url
src/: Baselex.l  Baseparse.y  Bitmap.h  Bool.h  Camera.h  Color.c  Color.h  ColorOption.h  Error.c  Error.h  Finish.c  Finish.h  HitData.h  Light.c  Light.h  LightArray.h  LightList.c  LightList.h  Makefile.am  Object.c  Object.h  ObjectArray.c  ObjectArray.h  ObjectList.c  ObjectList.h  ObjectMods.c  ObjectMods.h  PPMFile.c  PPMFile.h  Parameters.h  Pigment.c  Pigment.h  Plane.c  Plane.h  Ray.c  Ray.h  Sphere.c  Sphere.h  SphereOptions.c  SphereOptions.h  (+77 more)
test/: tests.sh
tests/: tests.sh
win32/: Makefile.am  protracer.iss.in
