bin_PROGRAMS=protracer

protracer_SOURCES=bitmap.cc \
	bitmap.h \
	bitmap_pigment.cc \
	bitmap_pigment.h \
	camera.cc \
	camera.h \
	color.h \
	color_pigment.h \
	constants.h \
	declaration.cc \
	declaration.h \
	disc.h \
	disc.cc \
	exception.h \
	finish.cc \
	finish.h \
	finish_modification.cc \
	finish_modification.h \
	hit_calculation.h \
	lexer.ll \
	light.cc \
	light.h \
	main.cc \
	object.cc \
	object.h \
	object_modification.h \
	parameters.cc \
	parameters.h \
	parser.yy \
	pigment.h \
	pigment_modification.cc \
	pigment_modification.h \
	plane.cc \
	plane.h \
	planar_object.cc \
	planar_object.h \
	ppm_file.cc \
	ppm_file.h \
	ray.h \
	scene.h \
	scene.cc \
	sphere.cc \
	sphere.h \
	translation.cc \
	translation.h \
	triangle.cc \
	triangle.h \
	util.cc \
	util.h \
	vector.cc \
	vector.h

BUILT_SOURCES=parser.h parser.cc lexer.cc

CLEANFILES=parser.cc parser.h lexer.cc
DISTCLEANFILES=parser.cc parser.h lexer.cc

AM_YFLAGS=-d